data/derived/comb/progs/unify/prog2159.ml.out
Characters 132-134:
  digit [] n;;
        ^^
Error: This expression has type 'a list
       but an expression was expected of type int
